--- a/src/application/RamGraph.fxml
+++ b/src/application/RamGraph.fxml
@@ -10,7 +10,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="348.0" prefWidth="430.0" style="-fx-border-radius: 500; -fx-background-radius: 500; -fx-background-color: transparent;" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.RamController">
+<AnchorPane fx:id="lastchance" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="348.0" prefWidth="430.0" style="-fx-border-radius: 500; -fx-background-radius: 500; -fx-background-color: transparent;" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.RamController">
    <children>
       <AnchorPane layoutX="56.0" layoutY="1.0" prefHeight="340.0" prefWidth="375.0" style="-fx-background-color: #303337; -fx-border-color: black; -fx-border-width: 2;">
          <children>
@@ -99,7 +99,7 @@
             <TextField editable="false" layoutX="6.0" layoutY="304.0" prefHeight="25.0" prefWidth="23.0" text="L" />
             <TextField editable="false" layoutX="35.0" layoutY="304.0" prefHeight="25.0" prefWidth="23.0" text="E" />
             <TextField editable="false" layoutX="63.0" layoutY="304.0" prefHeight="25.0" prefWidth="29.0" text="CS" />
-            <Circle fx:id="sortieDonees" fill="#303337" layoutX="286.0" layoutY="339.0" radius="4.0" stroke="BLACK" strokeType="INSIDE" />
+            <Circle fx:id="sortieDonees" fill="#303337" layoutX="287.0" layoutY="339.0" radius="4.0" stroke="BLACK" strokeType="INSIDE" />
             <Circle fx:id="lecture" fill="#303337" layoutX="17.0" layoutY="339.0" radius="4.0" stroke="BLACK" strokeType="INSIDE" />
             <Circle fx:id="ecriture" fill="#303337" layoutX="46.0" layoutY="339.0" radius="4.0" stroke="BLACK" strokeType="INSIDE" />
             <Circle fx:id="cs" fill="#303337" layoutX="77.0" layoutY="339.0" radius="4.0" stroke="BLACK" strokeType="INSIDE" />
